# artificial_intelligence_engineering

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: CHANGES.md  README.md
homeworks/HW03/eda-cli/reports/: correlation.csv  missing.csv  report.md  summary.csv
homeworks/HW03/eda-cli/reports_example/: report.md
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: .gitignore  CHANGES.md  README.md  pyproject.toml
homeworks/HW04/eda-cli/reports/: report.md
homeworks/HW04/eda-cli/src/eda_cli/: api.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06 (1).ipynb  HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW07/artifacts/labels/: labels_hw07_ds1.csv  labels_hw07_ds2.csv  labels_hw07_ds3.csv
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
homeworks/HW12/: HW12.ipynb  report.md
homeworks/HW12/artifacts/: best_gru.pt  best_gru_config.json  runs.csv
homeworks/HW13/: .gitignore  HW13.ipynb  report.md
homeworks/HW13/artifacts/: sample_predictions.csv
homeworks/HW14/: .gitignore  HW14.ipynb  report.md
homeworks/HW14/artifacts/: rag_examples.csv  retrieval_before_after_update.csv  retrieval_eval.csv
(+3 files in other folders)
